--- a/Data-content-standards-doc.Rmd
+++ b/Data-content-standards-doc.Rmd
@@ -3,8 +3,10 @@ title: "NatureServe's Benchmark Data Content Standards"
 author: "Max Tarjan"
 date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output:
-  word_document:
+  powerpoint_presentation:
+  #word_document:
       fig_caption: yes
+      reference_doc: "Presentation Template.pptx"
 ---
 
 ```{r setup, include=FALSE}
@@ -12,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, echo=FALSE, warning=FALSE, include=FALSE}
-figure.num<-1
+figure.num<-0
 table.num<-0
 ```
 
@@ -20,103 +22,102 @@ This report was produced using data content from the January 2022 snapshot of Ce
 
 # A. All element global records should have: 
 
-## 1. A global conservation status assessment (G-rank or T-rank other than GNR or TNR). 
+## 1. A global conservation status assessment. 
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of plants and animals in the primary global dataset with a global conservation status (G-rank or T-rank other than GNR/TNR).")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of plants and animals in the primary global dataset with a global conservation status (G-rank or T-rank other than GNR/TNR).")}
 knitr::include_graphics(path="Output/fig.G_Rank.taxa.png")
 figure.num<-figure.num+1
 ```
 
-## 2. Documentation of the ranking methodology that was used.
+## 2. Documentation of the ranking methodology.
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with rank methodology recorded. Center values show the percent of elements with rank methodology recorded (True, shown in green). White values in the donut sections indicate the number of elements for which the standard is true or false.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements with rank methodology recorded. Center values show the percent of elements with rank methodology recorded (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Rank_Method.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". % with methodology, % without methodology by G rank.")}
-knitr::include_graphics(path="Output/fig.Rank_Method.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements with rank methodology recorded by G-rank/T-rank. White values indicate the number of elements for which the standard is true (i.e. rank methodology is recorded, shown in green) or false (i.e., rank methodology is not recorded, shown in grey).")}
+knitr::include_graphics(path="Output/fig.Rank_Method.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". % of elements that use the rank calculator.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements that use the rank calculator. Center values show the percent of elements that were ranked using the rank calculator (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Rank_Calculator.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". % of elements that use the rank calculator by G rank.")}
-knitr::include_graphics(path="Output/fig.Rank_Calculator.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements that were ranked using the rank calculator by G-rank. White values indicate the number of elements for which the standard is true (i.e. the rank calculator was used, shown in green) or false (i.e., the rank calculator was not used, shown in grey).")}
+knitr::include_graphics(path="Output/fig.Rank_Calculator.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
-## 3. Threat categories indicated, even if assessed and found to be “unknown” (GH/G1/G2/G3 and TH/T1/T2/T3 taxa only).  
-Percent of at-risk elements with at least one threat category marked
+## 3. Threat categories indicated for at-risk elements, even if “unknown”.
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of at-risk elements with at least one threat category marked.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of at-risk elements with at least one threat category marked. Center values show the percent of at-risk elements (elements that are ranked GH/G1/G2/G3 or TH/T1/T2/T3) that have at least one threat category marked (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Threat_Category.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of at-risk elements with at least one threat category marked by G rank.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of at-risk elements with at least one threat category marked by G-rank. White values indicate the number of elements for which the standard is true (i.e. at least one threat category is marked, shown in green) or false (i.e., no threat categories are marked, shown in grey).")}
 knitr::include_graphics(path="Output/fig.Threat_Category.GRank.png")
 figure.num<-figure.num+1
 ```
 
 ## 4. A rank reasons statement.
 
-```{r, echo=FALSE, , fig.cap= paste("Fig ", figure.num, ". Percent of element with a rank reasons statement.")}
+```{r, echo=FALSE, , fig.cap= paste("Figure ", figure.num, ". Percent of elements with a rank reasons statement.")}
 knitr::include_graphics(path="Output/fig.Rank_Reason.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with a rank reasons statement by G rank.")}
-knitr::include_graphics(path="Output/fig.Rank_Reason.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements of each G-rank with a rank reasons statement. White values indicate the number of elements for which the standard is true (i.e. a rank reasons statement is given, shown in green) or false (i.e., no rank reasons statement is given, shown in grey).")}
+knitr::include_graphics(path="Output/fig.Rank_Reason.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
-## 5. Indication of the reason for the most recent rank change. 
+## 5. Indication of the reason for most recent rank change. 
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with rank change reasons indicated.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements with the reasons for rank change indicated. Only elements that have had a rank change are included. The date of the rank change must be the same as the date of the rank reasons statement for this standard to be evaluated as true.")}
 knitr::include_graphics(path="Output/fig.Rank_Change_Reason.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with rank change reasons indicated by G rank.")}
-knitr::include_graphics(path="Output/fig.Rank_Change_Reason.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements of each G-rank with rank change reasons indicated.")}
+knitr::include_graphics(path="Output/fig.Rank_Change_Reason.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
 ## 6. Habitat categories indicated. 
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with at least on habitat cateogry selected.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements with at least one habitat cateogry selected.")}
 knitr::include_graphics(path="Output/fig.Habitat_Categories.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with at least one habitat category selected by G rank.")}
-knitr::include_graphics(path="Output/fig.Habitat_Categories.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements with at least one habitat category selected by G-rank.")}
+knitr::include_graphics(path="Output/fig.Habitat_Categories.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
 
-## 7. A review of the global status rank at least every 10 years (except GX and TX). 
+## 7. A review of the global status rank at least every 10 years. 
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with a rank that was reviewed within the last ten years.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of elements with a global rank that was reviewed within the last ten years. Elements with conservation status ranks of GNA/TNA, GNR/TNR, and GX/TX are excluded.")}
 knitr::include_graphics(path="Output/fig.G_Rank_Review_Date.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Percent of elements with a rank that was reviewed within the last 10 years by G rank.")}
-knitr::include_graphics(path="Output/fig.G_Rank_Review_Date.GRank.png")
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements with a global rank that was reviewed within the last 10 years by G-rank. Elements with conservation status ranks of GNA/TNA, GNR/TNR, and GX/TX are excluded.")}
+knitr::include_graphics(path="Output/fig.G_Rank_Review_Date.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Histogram of year of last review.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Histogram of the year of last global rank review. Elements with a global rank review within the last ten years appear in green. Elements with conservation status ranks of GNA/TNA, GNR/TNR, and GX/TX are excluded.")}
 knitr::include_graphics(path="Output/fig.rankreviewdate.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Fig ", figure.num, ". Histogram of year of last review by G rank.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Histogram of the year of last global rank review by G-rank. Elements with a global rank review within the last ten years appear in green. Elements with conservation status ranks of GNA/TNA, and GX/TX are excluded.")}
 knitr::include_graphics(path="Output/fig.rankreviewdate.grank.png")
 figure.num<-figure.num+1
 ```
