--- a/Data-content-standards-doc.Rmd
+++ b/Data-content-standards-doc.Rmd
@@ -19,13 +19,13 @@ table.num<-0
 #dat <- read.csv("data/")
 ```
 
-This report was produced using data content from the January 2024 snapshot of Central Biotics on `r format(Sys.Date(), '%B %d, %Y')`. Data from past years were also included in some figures for a multi-year comparison.
+This report was produced using data content from the January 2025 snapshot of Central Biotics on `r format(Sys.Date(), '%B %d, %Y')`. Data from past years were also included in some figures for a multi-year comparison.
 
 # A. All element global records should have: 
 
 ## 1. A global conservation status assessment. 
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of plants and animals in the primary global dataset with a global conservation status (G-rank or T-rank other than GNR/TNR).")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of plants and animals in the primary global dataset with a global conservation status (G-rank or T-rank other than GNR/TNR).")}
 #knitr::include_graphics(path="Output/fig.G_Rank.taxa.png")
 knitr::include_graphics(path="Output/fig.G_Rank.taxa.multiyear.png")
 figure.num<-figure.num+1
@@ -38,7 +38,7 @@ figure.num<-figure.num+1
 
 ## 2. Documentation of the ranking methodology.
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements with rank methodology recorded. Center values show the percent of elements with rank methodology recorded (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with rank methodology recorded. Black percentages show the percent of elements with rank methodology recorded (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Rank_Method.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -58,7 +58,7 @@ knitr::include_graphics(path="Output/fig.ecosystems.Rank_Method.GRank.barplot.pn
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements that use the rank calculator. Center values show the percent of elements that were ranked using the rank calculator (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements that use the rank calculator. Black percentages show the percent of elements that were ranked using the rank calculator (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Rank_Calculator.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -80,7 +80,7 @@ figure.num<-figure.num+1
 
 ## 3. Threat categories indicated for at-risk elements, even if “unknown”.
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of at-risk species elements with at least one threat category marked. Center values show the percent of at-risk elements (elements that are ranked GH/G1/G2/G3 or TH/T1/T2/T3) that have at least one threat category marked (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of at-risk species elements with at least one threat category marked. Black percentages show the percent of at-risk elements (elements that are ranked GH/G1/G2/G3 or TH/T1/T2/T3) that have at least one threat category marked (True, shown in green). White values indicate the number of elements for which the standard is true or false.")}
 knitr::include_graphics(path="Output/fig.Threat_Category.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -92,7 +92,7 @@ figure.num<-figure.num+1
 
 ## 4. A rank reasons statement.
 
-```{r, echo=FALSE, , fig.cap= paste("Figure ", figure.num, ". Percent of species elements with a rank reasons statement.")}
+```{r, echo=FALSE, , fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with a rank reasons statement.")}
 knitr::include_graphics(path="Output/fig.Rank_Reason.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -102,19 +102,19 @@ knitr::include_graphics(path="Output/fig.Rank_Reason.ecosystems.taxa.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements of each G-rank with a rank reasons statement in the most recent annual snapshot. White values indicate the number of elements for which the standard is true (i.e. a rank reasons statement is given, shown in green) or false (i.e., no rank reasons statement is given, shown in grey).")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements of each G-rank with a rank reasons statement in the most recent annual snapshot. White values indicate the number of elements for which the standard is true (i.e. a rank reasons statement is given, shown in green) or false (i.e., no rank reasons statement is given, shown in grey).")}
 knitr::include_graphics(path="Output/fig.Rank_Reason.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of ecosystems of each G-rank with a rank reasons statement in the most recent annual snapshot. White values indicate the number of ecosystems for which the standard is true (i.e. a rank reasons statement is given, shown in green) or false (i.e., no rank reasons statement is given, shown in grey).")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of ecosystems of each G-rank with a rank reasons statement in the most recent annual snapshot. White values indicate the number of ecosystems for which the standard is true (i.e. a rank reasons statement is given, shown in green) or false (i.e., no rank reasons statement is given, shown in grey).")}
 knitr::include_graphics(path="Output/fig.ecosystems.Rank_Reason.GRank.barplot.png")
 figure.num<-figure.num+1
 ```
 
 ## 5. Indication of the reason for most recent rank change. 
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements with the reasons for rank change indicated. Only elements that have had a rank change are included. The date of the rank change must be the same as the date of the rank reasons statement for this standard to be evaluated as true.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with the reasons for rank change indicated. Only elements that have had a rank change are included. The date of the rank change must be the same as the date of the rank reasons statement for this standard to be evaluated as true.")}
 knitr::include_graphics(path="Output/fig.Rank_Change_Reason.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -126,7 +126,7 @@ figure.num<-figure.num+1
 
 ## 6. Habitat categories indicated. 
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements with at least one habitat cateogry selected.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with at least one habitat cateogry selected.")}
 knitr::include_graphics(path="Output/fig.Habitat_Categories.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
@@ -139,7 +139,7 @@ figure.num<-figure.num+1
 
 ## 7. A review of the global status rank at least every 10 years. 
 
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Percent of species elements with a global rank that was reviewed within the last ten years. Elements with conservation status ranks of GNA/TNA, GNR/TNR, and GX/TX are excluded.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with a global rank that was reviewed within the last ten years. Elements with conservation status ranks of GNA/TNA, GNR/TNR, and GX/TX are excluded.")}
 knitr::include_graphics(path="Output/fig.G_Rank_Review_Date.taxa.multiyear.png")
 figure.num<-figure.num+1
 ```
